Fixing update node buttons on mobile

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -43,6 +43,7 @@ section .section-title {
     position: absolute;
     top: 20px;
     right: 20px;
+    z-index: 12;
 }
 
 #footer {
